# DocStripper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GITHUB_IMPROVEMENTS_SUMMARY.md  HOMEBREW_TAP_SETUP.md  INSTALL.md  LICENSE.txt  PLAN.md  PROJECT_REVIEW.md  PROJECT_TEMPLATE_CHECKLIST.md  PUBLISH.md  PUBLISH_GUIDE.md  README.md  RELEASE_LEDGER.json  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  SELF_TESTS.md  SITE_REVIEW.md  TELEGRAM_MESSAGE.txt  TESTING_REPORT.md  TEST_REPORT.md  WORKLOG.md  docstripper.rb  publish.sh  pyproject.toml  setup.py  test1.txt  test2.txt  test_input.txt  test_utf8.txt  tool.py
.github/: GITHUB_SEO_CHECKLIST.md  SEO_GUIDE.md
.github/workflows/: README.md
docs/: CLEANING_SPEC.md  README.md  index.html  robots.txt  sitemap.xml  test_smart_clean.html
docs/assets/: app.js  cleaner.worker.js  style.css
docs/wiki/: API.md  Contributing.md  FAQ.md  Home.md  Installation.md  Usage.md
examples/: before_after.txt  fixture1_headers_footers.txt  fixture2_hyphenation.txt  fixture3_lists_tables.txt
scripts/: make_samples.py  self_test.py
test_files/: 01_business_report.txt  02_student_essay.txt  03_novel.txt  04_memo.txt  14_only_numbers.txt  15_only_symbols.txt  16_only_empty.txt  17_long_duplicates.txt  18_multilingual.txt  19_headers_middle.txt  20_roman_numerals.txt
test_inputs/: sample1_basic.txt  sample2_lists_tables.txt  sample3_multilingual.txt  sample4_simple.docx
~/Documents/ProjectTemplates/: .gitignore  README.md  SOCIAL_LINKS_TEMPLATE.md  SUPPORT_BUTTON_TEMPLATE.md
~/Documents/ProjectTemplates/TEMPLATE_FILES/: README.md
~/Documents/ProjectTemplates/TEMPLATE_FILES/support/: README.md
