[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docstripper"
version = "2.1.0"
description = "AI-powered batch document cleaner - Remove noise from text documents automatically"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kiku"}
]
keywords = ["document", "cleaner", "text", "processing", "pdf", "docx", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kiku-jw/DocStripper"
Documentation = "https://github.com/kiku-jw/DocStripper/wiki"
Repository = "https://github.com/kiku-jw/DocStripper"
"Bug Reports" = "https://github.com/kiku-jw/DocStripper/issues"

[project.scripts]
docstripper = "tool:main"

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true

# Pylint configuration
[tool.pylint.main]
py-version = "3.9"
jobs = 0
suggestion-mode = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0103",  # invalid-name (allow short variable names)
    "C0114",  # missing-module-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 120
indent-string = "    "

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 60

# Black configuration (code formatter)
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration (import sorter)
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["*_test.py", "test_*.py", "self_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["tool"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
